Next step in refactoring of Forward to use common Polygon data structures