@@ -6,7 +6,6 @@ import java.util.List;
 public enum UtilizationClassVariable {
 	BASAL_AREA, QUAD_MEAN_DIAMETER, LOREY_HEIGHT, WHOLE_STEM_VOLUME;
 
-	public static final List<UtilizationClassVariable> ALL = Collections.unmodifiableList(
-			List.of(BASAL_AREA, QUAD_MEAN_DIAMETER, LOREY_HEIGHT, WHOLE_STEM_VOLUME)
-	);
+	public static final List<UtilizationClassVariable> ALL = Collections
+			.unmodifiableList(List.of(BASAL_AREA, QUAD_MEAN_DIAMETER, LOREY_HEIGHT, WHOLE_STEM_VOLUME));
 }
